Fixed the problem where the clipping is doodoo on a small screen

--- a/src/style/sections/_blog.scss
+++ b/src/style/sections/_blog.scss
@@ -35,42 +35,3 @@
   margin: 0 auto;
   background-color: white;
 }
-
-#blog-footer {
-  // background-color: $primary-color;
-  // background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  // color: $white-color;
-  // height: 100%;
-  // border-top: 0px;
-  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  // clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
-  // padding-bottom: 10%;
-
-  @include respond(phone) {
-    border: 0px;
-  }
-
-  background-color: $dark-grey;
-  color: $white-color;
-  padding: 4.8rem 0;
-
-  .blog-footer__text {
-    color: darken(white, 50%);
-    font-size: 1.3rem;
-
-    a {
-      color: darken(white, 50%);
-      font-size: 1.3rem;
-      transition: all 0.4s;
-      display: inline-block;
-      background-color: $dark-grey;
-
-      &:hover,
-      &:active {
-        color: $primary-color;
-        -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-        box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
-      }
-    }
-  }
-}
