--- a/src/style/sections/blog-return-button.scss
+++ b/src/style/sections/blog-return-button.scss
@@ -1,8 +1,9 @@
 #blog-return-button {
   background-image: #fff;
-  clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
-  padding: 15rem 0 10rem 0;
-  margin-top: -15rem;
+  --webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+  padding: 3rem 0 10rem 0;
+  margin-top: 0rem;
   margin-bottom: -1px;
   color: $white-color;
 }
